increment _views on render, add username to viewed_by array if logged in

--- a/client/s.css
+++ b/client/s.css
@@ -584,8 +584,8 @@ a.title, #title {
 }
 
 input {
-    /*margin: 5px !important;*/
-    /*b/order-radius: 7px !important; */
+    /*margin: 7px !important;*/
+    border-radius: 7px !important; 
 }
 
 ::-webkit-scrollbar {
