--- a/parts/pr/post.jade
+++ b/parts/pr/post.jade
@@ -33,7 +33,6 @@ template(name='post_view')
 
             .row 
                 .four.wide.column
-                    img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                     .ui.segment
                         .ui.header 
                             small author
@@ -44,13 +43,20 @@ template(name='post_view')
                         i.line.chart.icon
                         |stats
                     .ui.list
-                        .item #{views} views
-                    each viewers
-                        .ui.label #{username
+                        .item #{_views} views
+                        |viewed by
+                        each _viewer_usernames
+                            .ui.label #{this}
                     +array_view key='tags' label='tags' direct=true
                     +voting_full
+                    +array_view key='location_tags' direct=true
+                    +array_view key='time_tags' direct=true
+                    +array_view key='people_tags' direct=true
+                    +array_view key='group_tags' direct=true
+                    +array_view key='tags' direct=true
                     //- +array_view key='location_tags' label='location_tags' direct=true
                 .twelve.wide.column
+                    img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                     // a.ui.header(href="/user/#{target.username}")
                     //     |#{target.username}
                     .ui.segment
@@ -88,8 +94,7 @@ template(name='post_edit')
                         +single_user_edit key='_author_id' label='author' direct=true
                     +image_edit key='image_id' label='image' direct=true
                     div 
-                    +array_edit key='tags' label='tags' direct=true
-                    +boolean_edit key='published' icon='visible' direct=true
+                    // +boolean_edit key='published' icon='visible' direct=true
                     if is_admin 
                         +text_edit key='model' label='model' direct=true
                     //- +array_edit key='location_tags' label='location_tags' direct=true
@@ -105,4 +110,8 @@ template(name='post_edit')
                 .twelve.wide.column
                     +text_edit key='title' label='title' direct=true
                     +html_edit key='content' label='content' direct=true
-        
+                    +array_edit key='tags' label='tags' i='tags' direct=true
+                    +array_edit key='location_tags' label='location tags' i='marker' direct=true
+                    +array_edit key='people_tags' label='people tags' i='users' direct=true
+                    +array_edit key='time_tags' label='time tags' i='clock' direct=true
+                    +array_edit key='group_tags' label='group tags' i='users circle' direct=true
