--- a/client/fields.jade
+++ b/client/fields.jade
@@ -758,10 +758,10 @@ template(name='datetime_view')
 
 
 template(name='array_edit')
-    div
-    if icon
-        //- i.grey.icon(class=icon)
-        +icon name=icon cl='ui avatar image'
+    .spacer
+    if i
+        i.grey.icon(class=i)
+        // +icon name=icon cl='ui avatar image'
     .ui.inline.header
         if title
             |#{title}
@@ -780,12 +780,15 @@ template(name='array_edit')
                 
 template(name='array_view')
     if field_value
-        div
+        // div
         if icon
             i.icon(class=icon)
         if label
             .ui.inline.small.grey.header(title=title)
                 |#{label}
+        else
+            .ui.inline.small.grey.header(title=title)
+                |#{key}
         each field_value
             .ui.basic.label #{this}
 
