--- a/parts/tribe.jade
+++ b/parts/tribe.jade
@@ -9,10 +9,10 @@ template(name='tribe_item')
 template(name='tribe_card')
     .ui.card
         if image_id
-            a.image(href="/m/tribe/#{_id}/view")
+            a.image(href="/tribe/#{name}")
                 img.ui.image.zoom(src="{{c.url image_id height=500 width=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
         .content
-            a.ui.header(href="/m/tribe/#{_id}/view") #{title}
+            a.ui.header(href="/tribe/#{name}") #{title}
             if private
                 i.large.lock.icon(title='private')
             each tags
@@ -22,62 +22,6 @@ template(name='tribe_card')
             i.chess.queen.icon
             |#{tribe_member_ids.length} members
         
-template(name='tribe_view')
-    unless current_tribe
-        .ui.center.aligned.basic.segment
-            i.massive.circular.plus.link.icon.create_tribe
-    with current_tribe
-        .ui.stackable.padded.grid
-            .centered.middle.aligned.row 
-                .four.wide.center.aligned.column
-                    a.ui.circular.button(href="/m/tribe")
-                        i.chevron.left.icon
-                        i.big.fire.icon
-                .eight.wide.center.aligned.column
-                    .ui.header 
-                        small view tribe 
-                        |#{title}
-                .four.wide.center.aligned.column
-                    if can_edit 
-                        a.ui.circular.icon.button(href="/m/tribe/#{_id}/edit" title='edit tribe instance')
-                            i.pencil.large.icon
-            .row 
-                .four.wide.column
-                    .ui.header
-                        +icon name='calendar'
-                        |#{title} events
-                    +image_view key='image_id' label='image' direct=true
-                .eight.wide.column
-                    +multi_user_view key='tribe_leader_ids' label='tribe leaders' direct=true
-                    +multi_user_view key='tribe_member_ids' label='tribe members' direct=true
-                    each members
-                        a.ui.header(href="/user/#{username}")
-                            img.ui.avatar.image(src="{{c.url profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-                            |#{username}
-                    +html_view key='description' label='description' direct=true
-                    div 
-                    +array_view key='tags' label='tags' direct=true
-                    .spacer
-                    .spacer
-                    +comments
-                    //- +array_view key='tribe_tags' label='tribe_tags' direct=true
-                .four.wide.column
-                    .ui.header  
-                        +icolor name='prize'
-                        |badges
-                    each tribe_badges
-                        .ui.header #{title}
-                    +tribe_membership
-                    a.ui.header(href="/m/tribe/#{_id}/view")
-                        |#{title}
-                    .ui.list
-                        each members
-                            .item #{username} contributer
-                            
-                    //- .ui.fluid.green.button.submit
-                    //-     i.checkmark.icon
-                    //-     |submit
-                    
                     
                     
 template(name='tribe_membership')
@@ -105,14 +49,14 @@ template(name='tribe_edit')
         .ui.stackable.padded.grid
             .middle.aligned.row 
                 .four.wide.center.aligned.column
-                    a.ui.green.icon.circular.button(href="/m/tribe/#{_id}/view" title='save')
+                    a.ui.green.circular.button(href="/tribe/#{name}" title='save')
                         i.checkmark.big.icon
-                        // |save
+                        |save
                 .eight.wide.center.aligned.column
                     .ui.small.inline.header 
                         +icon name='clock'
                         |edit tribe
-                    .ui.inline.header #{title}
+                    .ui.inline.header #{title} #{name}
                 .four.wide.center.aligned.column
                     .ui.icon.button.delete_item(title='delete tribe')
                         i.large.remove.icon
@@ -120,10 +64,10 @@ template(name='tribe_edit')
                 .four.wide.column
                     +multi_user_edit key='tribe_leader_ids' label='tribe leaders' direct=true
                     +multi_user_edit key='tribe_member_ids' label='tribe members' direct=true
+                    +image_edit key='image_id' label='image' direct=true
                 .eight.wide.column
                     +text_edit key='title' label='title' direct=true
                     +icon_edit key='icon' label='icon' direct=true
-                    +image_edit key='image_id' label='image' direct=true
                     +html_edit key='description' label='description' direct=true
                     div 
                     +array_edit key='tags' label='tags' icon='tags' direct=true
