--- a/client/nav.jade
+++ b/client/nav.jade
@@ -37,18 +37,19 @@ template(name='nav')
             i.yin.yang.loading.big.icon
             +status    
         .right.menu
-            a.icon.item.add(title='add post') 
-                i.plus.large.icon
-            if unread_count
-                a.item.alerts.select_term(href="#" class=alert_toggle_class)
-                    i.large.bell.icon
-                    if unread_count
-                        |#{unread_count}
-            else
-                a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
-                    i.large.outline.bell.icon
-            a.icon.item(href="/chat" title='chat') 
-                i.chat.outline.large.icon
+            if currentUser
+                a.icon.item.add(title='add post') 
+                    i.plus.large.icon
+                if unread_count
+                    a.item.alerts.select_term(href="#" class=alert_toggle_class)
+                        i.large.bell.icon
+                        if unread_count
+                            |#{unread_count}
+                else
+                    a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+                        i.large.outline.bell.icon
+                a.icon.item(href="/chat" title='chat') 
+                    i.chat.outline.large.icon
             // a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
             if is_dev 
                 .icon.item
