--- a/parts/account/register.jade
+++ b/parts/account/register.jade
@@ -4,28 +4,25 @@ template(name='register')
         .centered.middle.aligned.row
             .ten.wide.column
                 .ui.center.aligned.basic.segment
-                    img.ui.inline.medium.circular.image(src="{{c.url 'homestar_logo' height=500 width=500 gravity='face' crop='fill'}}")
-                    // .ui.inline.header 
-                    //     |Homestar Painting
                     .ui.inline.grey.header register
-                .ui.small.inline.header 
-                    |first name
-                .ui.fluid.input(class=login_class)
-                    input.first_name(type='text')
-                .ui.small.inline.header 
-                    |last name
-                .ui.fluid.input(class=login_class)
-                    input.last_name(type='text')
-                .ui.small.inline.header 
-                    i.mail.icon
-                    |email
-                .ui.fluid.icon.input(class=login_class)
-                    //- if email_valid
-                    if email_valid
-                        i.checkmark.large.green.icon
-                    else
-                        i.ban.orange.large.icon
-                    input.email_field(type='email')
+                // .ui.small.inline.header 
+                //     |first name
+                // .ui.fluid.input(class=login_class)
+                //     input.first_name(type='text')
+                // .ui.small.inline.header 
+                //     |last name
+                // .ui.fluid.input(class=login_class)
+                //     input.last_name(type='text')
+                // .ui.small.inline.header 
+                //     i.mail.icon
+                //     |email
+                // .ui.fluid.icon.input(class=login_class)
+                //     //- if email_valid
+                //     if email_valid
+                //         i.checkmark.large.green.icon
+                //     else
+                //         i.ban.orange.large.icon
+                //     input.email_field(type='email')
                 .ui.small.inline.header 
                     i.user.outline.icon
                     |username
@@ -43,6 +40,7 @@ template(name='register')
                 //     else
                 //         i.ban.icon
                 //     input.email(type='text')
+                .spacer
                 .ui.small.inline.header 
                     i.lock.grey.icon
                     // +icon name='password'
@@ -64,13 +62,13 @@ template(name='register')
                         i.user.plus.icon
                         |register
                     // .ui.small.header username "#{username}" found
-                    a.ui.basic.fluid.button(href='/login') 
-                        i.right.chevron.icon
-                        // +icon name='internal' cl='ui inline image'
-                        |login
+                    // a.ui.basic.fluid.button(href='/login') 
+                    //     i.right.chevron.icon
+                    //     // +icon name='internal' cl='ui inline image'
+                    //     |login
                 .ui.center.aligned.basic.segment    
-                    .ui.small.header by registering you agree to our 
-                        a(href='/p/privacy' target="_window") privacy policy
+                    // .ui.small.header by registering you agree to our 
+                    //     a(href='/p/privacy' target="_window") privacy policy
                     unless username
                         .ui.small.header or
                         a.ui.basic.sign.in.button(href='/login') 
