--- a/parts/tribe_view.jade
+++ b/parts/tribe_view.jade
@@ -6,9 +6,10 @@ template(name='tribe_view')
         .ui.stackable.padded.grid
             .row 
                 .four.wide.column
-                    a.ui.circular.button(href="/m/tribe")
+                    a.ui.circular.basic.button(href="/tribes")
                         i.chevron.left.icon
                         i.big.fire.icon
+                        |tribes
                     .ui.header 
                         small view tribe 
                         |#{title}
