--- a/parts/settings.jade
+++ b/parts/settings.jade
@@ -1,66 +1,66 @@
-template(name='settings')
-    .ui.stackable.padded.grid
-        .centered.middle.aligned.row
-            .sixteen.wide.column
-                .ui.dividing.header 
-                    |Settings
+// template(name='settings')
+//     .ui.stackable.padded.grid
+//         .centered.middle.aligned.row
+//             .sixteen.wide.column
+//                 .ui.dividing.header 
+//                     |Settings
                     
-        .centered.centered.row
-            .five.wide.column
-                .ui.segment
-                    .ui.dividing.header 
-                        i.store.icon
-                        |Products and Subscriptions
-                    |Control how you’re receiving leads and manage any active subscriptions on the Porch platform. Upgrade your account and opt into future products.
-                    .ui.link.large.selection.list
-                        .item Lead Preferences
-                        .item Vetted Network Status
-                        .item Rewards
+//         .centered.centered.row
+//             .five.wide.column
+//                 .ui.segment
+//                     .ui.dividing.header 
+//                         i.store.icon
+//                         |Products and Subscriptions
+//                     |Control how you’re receiving leads and manage any active subscriptions on the Porch platform. Upgrade your account and opt into future products.
+//                     .ui.link.large.selection.list
+//                         .item Lead Preferences
+//                         .item Vetted Network Status
+//                         .item Rewards
 
-            .five.wide.column
-                .ui.segment
-                    .ui.dividing.header 
-                        i.map.icon
-                        |Services & Service Area
-                    |Control how you’re receiving leads and manage any active subscriptions on the Porch platform. Upgrade your account and opt into future products.
-                    .ui.link.large.selection.list
-                        .item Modify Trades & Services
-                        .item Update Service Area
-            .five.wide.column
-                .ui.segment
-                    .ui.dividing.header 
-                        i.building.icon
-                        |Company and Profile
-                    |Maintain a quality company profile on Porch. Add a logo, a business description and other information to help you attract more customers.
-                    .ui.link.large.selection.list
-                        .item Edit Company Profile
-                        .item Edit Licenses
-                        .item Edit Profile Projects
-                        .item Manage Company Reviews
-                        .item Porch Pro Badges
+//             .five.wide.column
+//                 .ui.segment
+//                     .ui.dividing.header 
+//                         i.map.icon
+//                         |Services & Service Area
+//                     |Control how you’re receiving leads and manage any active subscriptions on the Porch platform. Upgrade your account and opt into future products.
+//                     .ui.link.large.selection.list
+//                         .item Modify Trades & Services
+//                         .item Update Service Area
+//             .five.wide.column
+//                 .ui.segment
+//                     .ui.dividing.header 
+//                         i.building.icon
+//                         |Company and Profile
+//                     |Maintain a quality company profile on Porch. Add a logo, a business description and other information to help you attract more customers.
+//                     .ui.link.large.selection.list
+//                         .item Edit Company Profile
+//                         .item Edit Licenses
+//                         .item Edit Profile Projects
+//                         .item Manage Company Reviews
+//                         .item Porch Pro Badges
 
-            .five.wide.column
-                .ui.segment
-                    .ui.dividing.header 
-                        i.inbox.icon
-                        |Notifications and Alerts
-                    |Control your notification preferences and keep your automated response to customers up to date. Pause your leads when you’re on vacation.
-                    .ui.link.large.selection.list
-                        .item Edit Automated Responses
-                        .item Change Notifications
-                        .item Pause Lead Delivery
+//             .five.wide.column
+//                 .ui.segment
+//                     .ui.dividing.header 
+//                         i.inbox.icon
+//                         |Notifications and Alerts
+//                     |Control your notification preferences and keep your automated response to customers up to date. Pause your leads when you’re on vacation.
+//                     .ui.link.large.selection.list
+//                         .item Edit Automated Responses
+//                         .item Change Notifications
+//                         .item Pause Lead Delivery
 
-            .five.wide.column
-                .ui.segment
-                    .ui.dividing.header 
-                        i.user.icon
-                        |User Settings
-                    |Change your password or update your account information. Control your notification preferences and business updates from Porch.
-                    .ui.link.large.selection.list
-                        .item Update User Information
-                        .item Change Password
-                        .item Manage Payment Methods
-                        .item Change Notifications
+//             .five.wide.column
+//                 .ui.segment
+//                     .ui.dividing.header 
+//                         i.user.icon
+//                         |User Settings
+//                     |Change your password or update your account information. Control your notification preferences and business updates from Porch.
+//                     .ui.link.large.selection.list
+//                         .item Update User Information
+//                         .item Change Password
+//                         .item Manage Payment Methods
+//                         .item Change Notifications
 
                         
                         
