--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -111,7 +111,7 @@ template(name='comments_view_small')
                 
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.button.set_session_v.say(class=calculated_class title=t)
+    .ui.circular.button.set_session_v.say(class=calculated_class title=t)
         // if i
         if selected 
             // +i n=i cl='ui mini inline image'
